# vllm-demo

./: .gitignore  .gitmodules  README.md  analyze_culturalbench_result.py  analyze_result.py  check-vllm.py  check_dataset_sizes.py  main.py  pyproject.toml  run_experiments.py  slurm-8044864.out  slurm-8044881.out  test_carrot.py
config/: blend_config.yaml  cultural_bench_config.yaml
configs/: eval_carrot.yaml
experiments/: blend_experiment_runner.py  cultural_bench_experiment_runner.py  experiment_runner.py
experiments/configs/: blend_kr.yaml  blend_multi_culture.yaml
inference/: vllm_engine.py
repos/: repo_manager.py
results/: South Korea Cultural Knowledge Evaluation_test2_500samp_summary.json  South Korea Cultural Knowledge Evaluation_test3_1000samp.json  South Korea Cultural Knowledge Evaluation_test4_10000samp_summary.json  accuracy_table.csv  all_results_summary.csv  blend_algeria_mcq_20251127_205037.json  blend_algeria_test1.txt  format_table.csv
results/algeria_testing/: blend_algeria_mcq_20251127_205037_summary.json
results/blend_figures/: blend_accuracy_table.csv
results/blend_final_results_llama3b/: assamese_llama_3b.json  china_llama_3b_summary.json  iran_llama_3b_summary.json  south_korea_llama_3b_summary.json  sundanese_llama_3b_summary.json  uk_llama_3b_summary.json  us_llama_3b_summary.json
results/blend_final_results_qwen2_5b/: assamese_qwen_2.5b_summary.json  china_qwen_2.5b_summary.json  iran_qwen_2.5b_summary.json  (+4 more)
runners/: eval_carrot_rank.py
tasks/: base_task.py  blend_task.py  carrot_task.py  cultural_bench_task.py
(+32 files in other folders)
