[project]
name = "ramesana"
version = "0.1.0"
description = "vllm testing"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "cmake>=4.1.2",
    "gitpython>=3.1.45",
    "ninja>=1.13.0",
    "setuptools>=80.9.0",
    "torch==2.5.1",
    "torchaudio==2.5.1",
    "torchvision==0.20.1",
    "vllm==0.6.5",
    "wheel>=0.45.1",
]

[tool.uv.extra-build-dependencies]
flash-attn = [{ requirement = "torch", match-runtime = true }]

[tool.uv.extra-build-variables]
flash-attn = { FLASH_ATTENTION_SKIP_CUDA_BUILD = "TRUE" }
